Gemfile & font styling updates

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+markdown:         kramdown
+# highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+# relative_permalinks: true
 
 # Setup
-title:            Hyde
+title:            CAMBRIDGE
+subtitle:		  PRODUCT
 tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      
 url:              http://hyde.getpoole.com
 baseurl:          /
 
