--- a/_config.yml
+++ b/_config.yml
@@ -8,19 +8,19 @@ permalink:        pretty
 # Setup
 title:            CAMBRIDGE
 subtitle:		  PRODUCT
-tagline:          'A Jekyll theme'
+tagline:          'An experiment'
 description:      
-url:              http://hyde.getpoole.com
+url:              http://www.cambridgeproduct.com
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           
+  url:            
 
 paginate:         5
 
 # Custom vars
-version:          2.1.0
+version:          0.1
 
 github:
   repo:           https://github.com/poole/hyde
