--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 # highlighter:      pygments
 
 # Permalinks
-permalink:        pretty
+# permalink:        pretty
 
 # Setup
 title:            CAMBRIDGE
@@ -22,5 +22,5 @@ paginate:         5
 # Custom vars
 version:          0.1
 
-github:
-  repo:           https://github.com/poole/hyde
+# github:
+#  repo:           https://github.com/poole/hyde
