Remove error halt line

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 script: 
-	- set -e # halt script on error
+	#- set -e # halt script on error
 	- bundle exec jekyll build
 	# bundle exec htmlproofer ./_site --http-status-ignore "999" ./out
 
